[package]
name = "llmhub"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.12.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
regex = "1.11.1"
once_cell = "1.18.0"
log = "0.4.20"
bytes = "1.10.0"

[[example]]
name = "llmhub_test"
path = "examples/main.rs"
